# Fitness-Intelligence-Platform

./: .env.example  .gitignore  AGENTS.md  README.md  compose.yaml  render.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260713_0001_initial.py  20260714_0002_daily_intelligence.py  20260715_0003_coach_invites.py  20260716_0004_public_demo.py  20260716_0012_workout_skip.py  (+12 more)
backend/app/: avatar_services.py  config.py  daily_services.py  database.py  exercise_media_services.py  exercise_services.py  invitations.py  library_services.py  main.py  media_services.py  models.py  profile_services.py  schemas.py  security.py  services.py  training_assignment_services.py  training_program_services.py  workout_analytics_services.py  workout_readiness_services.py  workout_safety_services.py  workout_session_services.py  workout_template_services.py
backend/scripts/: library_content.py  seed.py  seed_library.py  start.py
backend/tests/: conftest.py  test_api_flow.py  test_avatar_profiles.py  test_daily_api.py  test_daily_risk.py  test_daily_scoring.py  test_deployment.py  test_exercise_library.py  test_exercise_media.py  test_media.py  test_public_demo.py  test_registration_invites.py  test_risk.py  test_scoring.py  test_starter_library.py  test_training_assignments.py  test_training_programs.py  test_user_identity.py  test_workout_analytics_api.py  test_workout_load_engine.py  test_workout_safety_readiness.py  test_workout_sessions.py  test_workout_skip.py  test_workout_templates.py
(+193 files in other folders)
