[project]
name = "fitness-intelligence-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "bcrypt>=4.1,<5",
  "email-validator>=2.1,<3",
  "fastapi>=0.115,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.5,<3",
  "PyJWT>=2.9,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = ["httpx>=0.27,<1", "pytest>=8.3,<9", "pytest-cov>=5,<6", "ruff>=0.6,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501", "UP042"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
